--- a/angular/zorroantd/src/app/app.component.css
+++ b/angular/zorroantd/src/app/app.component.css
@@ -65,7 +65,7 @@ nz-header {
   position: relative;
   height: 64px;
   padding: 0;
-  background: #fff;
+  background: rgb(224, 33, 33);
   box-shadow: 0 1px 4px rgba(0,21,41,.08);
 }
 
