--- a/angular/lazyload/src/app/app.component.html
+++ b/angular/lazyload/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <header>
-<a [routerLink]="[ 'user999' ]">user</a>
+<a [routerLink]="[ '/user' ]">user</a>
 <a [routerLink]="[ '/article' ]">article</a>
 <a [routerLink]="[ '/product' ]">product</a>
 </header>
