--- a/angular/zorroantd/src/app/pages/monitor/monitor.component.html
+++ b/angular/zorroantd/src/app/pages/monitor/monitor.component.html
@@ -59,6 +59,6 @@ d3
 </span>
 
 <!-- <nz-time-picker [(ngModel)]="timePK" name=" timP   " nzPlaceHolder="Please select time"></nz-time-picker> -->
-<script type="text/typescript">
-  console.log("test")
+<script type="text/javascript">
+  console.log("htmlscript:test")
 </script>
