--- a/angular/lazyload/src/app/modules/user/user.component.html
+++ b/angular/lazyload/src/app/modules/user/user.component.html
@@ -1,3 +1,8 @@
 <p>user works!</p>
-<router-outlet></router-outlet>
+
+<a [routerLink]="[ './components/address' ]">address</a>
+<br>
+<a [routerLink]="[ './profile' ]">profile</a>
+<!-- <a [routerLink]="[ '/profile' ]">profile</a> -->
+<!-- <router-outlet></router-outlet> -->
 
