--- a/angular/zorroantd/src/app/pages/monitor/monitor.component.html
+++ b/angular/zorroantd/src/app/pages/monitor/monitor.component.html
@@ -48,15 +48,17 @@
 
 <span [ngSwitch]="pNo" [hidden]="expression">
 <p *ngSwitchCase="1">
-1
+case 1
 </p>
 <p *ngSwitchCase="2">
-2
+case 2
 </p>
 <p *ngSwitchDefault>
-d3
+default 3
 </p>
 </span>
+    
+<i nz-icon nzType="left" nzTheme="outline"></i>
 
 <!-- <nz-time-picker [(ngModel)]="timePK" name=" timP   " nzPlaceHolder="Please select time"></nz-time-picker> -->
 <script type="text/javascript">
