--- a/angular/angulardemo01/src/app/app.component.html
+++ b/angular/angulardemo01/src/app/app.component.html
@@ -16,6 +16,10 @@
 <!-- <app-homie></app-homie> -->
 <!-- <app-newnews></app-newnews> -->
 <app-lifecycle></app-lifecycle>
+<h2><a [routerLink] = "'/contacts'">Contacts</a></h2>
+<router-outlet></router-outlet>
+
+
 
 <style>
   :host {
