--- a/angular/zorroantd/src/app/pages/monitor/monitor.component.css
+++ b/angular/zorroantd/src/app/pages/monitor/monitor.component.css
@@ -2,6 +2,13 @@
     background-color: cadetblue;
 } */
 
- ::ng-deep .ant-table-thead > tr > th {
+ /* ::ng-deep .ant-table-thead > tr > th {
     background-color: cyan;
-}
+} */
+
+
+
+
+/* :host ::ng-deep .ant-tabs-nav-scroll{
+    border:none;
+} */
