--- a/angular/zorroantd/src/app/app.component.html
+++ b/angular/zorroantd/src/app/app.component.html
@@ -21,7 +21,13 @@
             <a routerLink="./pages/monitor">Monitor</a>
           </li>
           <li nz-menu-item nzMatchRouter>
-            <a routerLink="">Workplace</a>
+            <a routerLink="./pages/table-sort-combine">TableSortCom</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="./pages/workplace">Workplace</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="./pages/backendget">BackendGet</a>
           </li>
         </ul>
       </li>
