--- a/angular/zorroantd/src/app/pages/table-sort-combine/table-sort-combine.component.html
+++ b/angular/zorroantd/src/app/pages/table-sort-combine/table-sort-combine.component.html
@@ -26,20 +26,23 @@
          <th nzShowSort nzSortKey="name">Name</th>
          <th nzShowFilter [nzFilters]="filterGender" (nzFilterChange)="updateFilter($event)">Gender</th>
          <th nzShowSort nzSortKey="email"><span>Email</span></th>
-         <th nzCustomFilter>time：每个 nz-dropdown-menu 只能作为一个 [nz-dropdown] 的输入项
+         <th nzCustomFilter>time：每个 nz-dropdown-menu 只能作为一个 [nz-dropdown] 的输入项,nzCustomFilter表示自定义搜索（没用自带的那套filterFn）
           <!-- <i nz-icon nzType="search" nzTheme="outline"></i> -->
+          <!-- ant-table-filter-icon让search图标贴边 -->
+      <!-- (keydown)="($event.which === 13) ? search() : 0" -->
+
           <i
           nz-th-extra
           class="ant-table-filter-icon"
           nz-icon
-          nz-dropdown
-          #dropdown="nzDropdown"
           nzType="search"
+          nz-dropdown
           [nzDropdownMenu]="menu"
-          [class.ant-table-filter-open]="dropdown.nzVisible"
           nzTrigger="click"
           nzPlacement="bottomCenter"
           [nzClickHide]="false"
+          #dropdown="nzDropdown"
+          [class.ant-table-filter-open]="dropdown.nzVisible"
           nzTableFilter
         ></i>
          </th>
@@ -61,8 +64,10 @@
 </nz-table>
 <nz-dropdown-menu #menu="nzDropdownMenu">
   <div class="search-box">
-    <input type="text" nz-input placeholder="请输入搜索内容" [(ngModel)]="searchValue" />
-    <button nz-button nzSize="small" nzType="primary" (click)="search()" class="search-button">
+    <input type="text" nz-input placeholder="请输入搜索内容" [(ngModel)]="searchValue" (onfocus)="focusF" (keydown)="($event.which === 13) ? search() : 0"/>
+    <!-- <input type="text" nz-input placeholder="请输入搜索内容" [(ngModel)]="searchValue" (onfocus)="focusF" (keydown)=keydown($event)/> -->
+    <button nz-button nzSize="small" nzType="primary" (click)="search()" class="search-button" 
+        >
       搜索
     </button>
     <button nz-button nzSize="small" (click)="reset()">重置</button>
