feat:项目月报:npm耐心排错

--- a/angular/ionic_demo/ionicdemo01/src/app/tab1/tab1.page.html
+++ b/angular/ionic_demo/ionicdemo01/src/app/tab1/tab1.page.html
@@ -22,6 +22,10 @@
     跳转到button
   </ion-button>
 
+  <ion-button color="warning" expand="block" fill="clear" shape="box"  [routerLink]="[ '/demogridbasic' ]">
+    跳转到Grid
+  </ion-button>
+
   <ion-list>
       <ion-item>
         <ion-label>Awesome Label</ion-label>
