change:FileName/FileContent:doc/xls/docx/xlsx

--- a/angular/zorroantd/src/app/app.component.html
+++ b/angular/zorroantd/src/app/app.component.html
@@ -29,6 +29,12 @@
           <li nz-menu-item nzMatchRouter>
             <a routerLink="./pages/backendget">BackendGet</a>
           </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="./pages/exceltxt">upload</a>
+          </li>
+          <li nz-menu-item nzMatchRouter>
+            <a routerLink="./pages/excel">excel</a>
+          </li>
         </ul>
       </li>
       <li nz-submenu nzOpen nzTitle="Form" nzIcon="form">
