--- a/angular/Angular-GettingStarted/APM-Final/src/app/home/welcome.component.html
+++ b/angular/Angular-GettingStarted/APM-Final/src/app/home/welcome.component.html
@@ -1,4 +1,5 @@
-﻿<div class="card">
+﻿<!-- <pm-star [ratingT]="tmpRating" > </pm-star> -->
+<div class="card">
   <div class="card-header">
     {{pageTitle}}
   </div>
